Added purchase controller and views.

--- a/CarStore/Views/Shared/_Layout.cshtml
+++ b/CarStore/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li><a href="/CarModel/Index/1">RENAULT</a></li>
                     <li>@Html.ActionLink("ABOUT US", "About", "Home")</li>
                     <li>@Html.ActionLink("CONTACT", "Contact", "Home")</li>
+                    <li><a href="/Purchase/Create">P</a></li>
                 </ul>
             </div>
         </div>
