--- a/CarStore/Views/Shared/_Layout.cshtml
+++ b/CarStore/Views/Shared/_Layout.cshtml
@@ -20,11 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Brand/Index">BRANDS</a></li>
                     <li><a href="/CarModel/Index/1">RENAULT</a></li>
-                    <li>@Html.ActionLink("ABOUT US", "About", "Home")</li>
-                    <li>@Html.ActionLink("CONTACT", "Contact", "Home")</li>
                     <li><a href="/Purchase/Create">P</a></li>
+                    <li>@Html.ActionLink("(CONTACT)", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
