--- a/CarStore/Views/Brand/Index.cshtml
+++ b/CarStore/Views/Brand/Index.cshtml
@@ -5,15 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Brands list</h2>
+<h2>Brand</h2>
 
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Country)
         </th>
         <th></th>
     </tr>
@@ -22,9 +19,6 @@
 <tr>
     <td>
         @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Country)
     </td>
     <td>
         @Html.ActionLink("Details", "Details", new { id = item.Id }) 
