Added styles for several views.

--- a/CarStore/Content/Site.css
+++ b/CarStore/Content/Site.css
@@ -1,19 +1,29 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    color: #ffffff;
+    line-height: 4;
+    background: url(../App_Images/font.jpg);
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+a {
+    color: #aae6fe;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+    a:hover {
+        color: #00b7ff;
+    }
+
+*,
+*:before,
+*:after {
+   box-sizing: border-box;
+}
+
+.container-sheet {
+    width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -21,4 +31,23 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+
+table {
+    width: 100%;
+    height: auto;
+    border: 2px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+td {
+    font-size: 30px; 
+    padding-left: 40px;
+}
+
+h1 {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 45px;
 }
