--- a/CarStore/Views/Brand/Details.cshtml
+++ b/CarStore/Views/Brand/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Brand</h2>
 
 <div>
-    <h4>Brand</h4>
+    <h4>@Model.Name</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
