--- a/CarStore/Views/Brand/Index.cshtml
+++ b/CarStore/Views/Brand/Index.cshtml
@@ -5,28 +5,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Brand</h2>
+    <head>
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")
+        <meta name="viewport" content="width=device-width" />
+        <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+        <link type="text/css" rel="stylesheet" href="../../Content/ViewsCSS/BrandIndex.css" />
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Barlow+Condensed:400,700|Open+Sans:400,700|Oswald:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    </head>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+    <body class="body">
+        <h1>Brand</h1>
+        <hr />
+        <table>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th></th>
+                <th></th>
+            </tr>*@
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) 
-    </td>
-    <td>
-        <a href="/CarModel/Index/@item.Id">View cars</a>
-    </td>
-</tr>
-}
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @if (item.Id == 1) 
+                        {
+                        <img src="~/App_Images/Renault-logo.png" alt="Renault-icon" class="small-icon"/>
+                        }
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    </td>
+                    <td>
+                        <a href="/CarModel/Index/@item.Id">View cars</a>
+                    </td>
+                </tr>
+            }
 
-</table>
+        </table>
+    </body>
