--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>CarModel</h4>
+    <h4>@Model.Name</h4>
     <hr />
     <dl class="dl-horizontal">
         @*<dt>
