--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -5,37 +5,51 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Models list</h2>
+    <head>
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")
+        <meta name="viewport" content="width=device-width" />
+        <link type="text/css" rel="stylesheet" href="../../Content/ViewsCSS/CarModelIndex.css" />
+        <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Barlow+Condensed:400,700|Open+Sans:400,700|Oswald:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
 
-<table class="table">
-    <tr>
-        @*<th>
-            @Html.DisplayNameFor(model => model.BrandId)
-        </th>*@
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+    </head>
 
-@foreach (var item in Model) {
-<tr>
-    @*<td>
-            @Html.DisplayFor(modelItem => item.BrandId)
-        </td>*@
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.ActionLink("Details", "Details", new { id = item.Id })
-    </td>
-    <td>
-        <a href="/CarColor/Index">Color</a>
-    </td>
-    <td>
-        <a href="/Config/Index/@item.Id">Configuration</a>
-    </td>
-</tr>
-}
+    <body class="body">
+        <h1>Models</h1>
+        <hr />
+        <table class="tab">
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.BrandId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th></th>
+            </tr>*@
 
-</table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    @*<td>
+                        @Html.DisplayFor(modelItem => item.BrandId)
+                    </td>*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    </td>
+                    <td>
+                        <a href="/CarColor/Index">Color</a>
+                    </td>
+                    <td>
+                        <a href="/Config/Index/@item.Id">Configuration</a>
+                    </td>
+                </tr>
+            }
+
+        </table>
+
+    </body>
