--- a/CarStore/Views/Shared/_Layout.cshtml
+++ b/CarStore/Views/Shared/_Layout.cshtml
@@ -3,35 +3,40 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link type="text/css" rel="stylesheet" href="../../Content/ViewsCSS/_Layout.css" />
+    <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Barlow+Condensed:400,700|Open+Sans:400,700|Oswald:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("RS STORE", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/CarModel/Index/1">RENAULT</a></li>
-                    <li><a href="/Purchase/Create">P</a></li>
-                    <li>@Html.ActionLink("(CONTACT)", "Contact", "Home")</li>
-                </ul>
+
+    <header class="header">
+        <div class="container-sheet">   
+            <div class="header-inner">
+                <div>
+                    <a class="header-logo" href="/Home/Index">RS STORE</a>
+                </div>
+
+                <nav class="navigation">
+                    <a class="nav-link" href="/Brand/Index">ALL BRANDS</a>
+                    <a class="nav-link" href="/CarModel/Index/1">RENAULT</a>
+                    <a class="nav-link" href="/CarModel/Index/2">AUDI</a>
+                    <a class="nav-link" href="/Purchase/Create">Purchase</a>
+                    <a class="nav-link" href="/Home/Contact">(C)</a>
+                    <a class="nav-link" href="/Home/About">(A)</a>
+                </nav>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
+    </header>
+
+
+    <div class="container-sheet">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer class="footer">
+            <p>&copy; @DateTime.Now.Year - RSCarStore. All rights reserved.</p>
         </footer>
     </div>
 
