--- a/CarStore/Views/Home/Index.cshtml
+++ b/CarStore/Views/Home/Index.cshtml
@@ -26,15 +26,19 @@
             </div>
 
             <div class="img-div">
-                <img src="~/App_Images/LogoImg.png" alt="Logo_img" class="logo-img" />
+                <img src="~/App_Images/MainLogo.png" alt="Logo_img" class="logo-img" />
             </div>
         </div>               
         <br>
             <h1>Brands info pages</h1>
         <br>
         <div>
-            <a href="/Brand/Details/1"><img src="~/App_Images/Renault-logo.png" alt="Renault_img" /></a>
-            <a href="/Brand/Details/2" class="audi-img"><img src="#" alt="Audi-img" /></a>
+            <a href="/Brand/Details/1">
+                <img src="~/App_Images/renault-logo.jpg" alt="Renault_img" class="renault-img"/>
+            </a>
+            <a href="/Brand/Details/2">
+                <img src="~/App_Images/audi-logo.png" alt="Audi-img" class="audi-img"/>
+            </a>
         </div>
         <br>
     </body>
