--- a/CarStore/Content/Site.css
+++ b/CarStore/Content/Site.css
@@ -1,9 +1,12 @@
 ﻿body {
+    height: auto;
     margin: 0;
+    margin-top: 100px;
     font-family: 'Open Sans', sans-serif;
     color: #ffffff;
     line-height: 4;
     background: url(../App_Images/font.jpg);
+    text-decoration: none;
 }
 
 a {
@@ -13,6 +16,10 @@ a {
     a:hover {
         color: #00b7ff;
     }
+
+.back-link {
+    font-size: 20px;
+}
 
 *,
 *:before,
@@ -33,21 +40,87 @@ textarea {
     max-width: 280px;
 }
 
+/*Tabel*/
 
-table {
+/* brand and models */
+.table-bm {
     width: 100%;
     height: auto;
-    border: 2px;
     text-align: left;
     vertical-align: middle;
+    background-color: #000000;
+    opacity: 0.65;
+    margin-top: 50px;
+    margin-bottom: 25vh;
+    border-top: 1px solid #ffffff;
 }
 
-td {
+.td-bm {
     font-size: 30px; 
     padding-left: 40px;
 }
 
+.tr-bm {
+    border-bottom: 1px solid #ffffff;
+}
+
+/* color and configs */
+
+.table-cc {
+    width: 100%;
+    height: auto;
+    text-align: left;
+    vertical-align: middle;
+    background-color: #000000;
+    opacity: 0.65;
+    margin-top: 50px;
+    margin-bottom: 25vh;
+    border-top: 1px solid #ffffff;
+}
+
+.td-cc {
+    font-size: 30px;
+    padding-left: 40px;
+}
+
+.tr-cc {
+    border-bottom: 1px solid #ffffff;
+}
+
+.th-cc {
+    color: #aae6fe;
+    font-size: 20px;
+}
+
+/* Header */
+
 h1 {
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 45px;
+}
+
+h2 {
+    text-align: center;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 45px;
+    color: #aae6fe;
+}
+
+/* determination */
+
+dt {
+    display: inline-block;
+    margin: 20px;
+    vertical-align: middle;
+    font-size: 30px;
+    color: #aae6fe;
+}
+
+dl,
+dd {
+    display: inline-block;
+    margin: 20px;
+    vertical-align: middle;
+    font-size: 30px;
+    line-height: 2;
 }
