--- a/CarStore/Content/ViewsCSS/BrandIndex.css
+++ b/CarStore/Content/ViewsCSS/BrandIndex.css
@@ -1,8 +1,4 @@
-﻿.body {
-    margin-top: 100px;
-}
-
-.small-icon {
-    height: 40px;
-    width: 35px;
+﻿.small-icon {
+    height: 55px;
+    width: 60px;
 }
