--- a/CarStore/Content/ViewsCSS/CarModelIndex.css
+++ b/CarStore/Content/ViewsCSS/CarModelIndex.css
@@ -1,13 +1,10 @@
-﻿.tab {
-    width: 100%;
-    height: auto;
-    border: 2px;
-    text-align: left;
-    vertical-align: middle;
-    background-color: #000000;
-    opacity: 0.65;
+﻿.small-icon {
+    margin: 10px;
+    height: 100px;
+    width: 180px; 
+    opacity: 1;
 }
 
-.body {
-    margin-top: 100px;
+span{
+
 }
