--- a/CarStore/Views/CarColor/Index.cshtml
+++ b/CarStore/Views/CarColor/Index.cshtml
@@ -5,33 +5,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Colors list</h2>
+    <head>
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")
+        <meta name="viewport" content="width=device-width" />
+        <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+        <link type="text/css" rel="stylesheet" href="../../Content/ViewsCSS/CarColorIndex.css" />
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Barlow+Condensed:400,700|Open+Sans:400,700|Oswald:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    </head>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.RGBCode)
-        </th>*@
-        <th></th>
-    </tr>
+    <body>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.RGBCode)
-        </td>*@
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
-        </td>
-    </tr>
-}
-</table>
-<p>
-    <a href="/CarModel/Index">Back</a> @*doesn't work correct*@
-</p>
+        <h2>Colors list</h2>
+
+        <table class="table-cc">
+
+            @foreach (var item in Model)
+            {
+                <tr class="tr-cc">
+                    <td class="td-cc">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td class="td-cc"> 
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        </table>
+        <p>
+            <a href="/CarModel/Index">Back</a> @*doesn't work correct*@
+        </p>
+
+    </body>
