--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -5,30 +5,107 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<head>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    <meta name="viewport" content="width=device-width" />
+    <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+    <link type="text/css" rel="stylesheet" href="../../Content/ViewsCSS/CarModelDetails.css" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Barlow+Condensed:400,700|Open+Sans:400,700|Oswald:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+</head>
 
-<div>
-    <h4>@Model.Name</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.BrandId)
-        </dt>
+@if (Model.Id == 1)
+{
+    <body>
 
-        <dd>
-            @Html.DisplayFor(model => model.BrandId)
-        </dd>*@
+        <h1>Details</h1>
+        <div>
+            <hr />
+            <h2>@Model.Name</h2>
+            
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        </div>
+        <p>
+            <a class="back-link" href="/CarModel/Index/1">Back to list</a>
+        </p>
+    </body>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+}
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@if (Model.Id == 2)
+{
+    <body>
+
+        <h1>Details (Duster)</h1>
+
+        <div>
+            <hr />
+            <dl>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name):
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+            </dl>
+        </div>
+        <p>
+            <a class="back-link" href="/CarModel/Index/1">Back to list</a>
+        </p>
+    </body>
+}
+
+@if (Model.Id == 3)
+{
+    <body>
+
+        <h1>Details(RS7)</h1>
+
+        <div>
+            <hr />
+            <dl>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name):
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+            </dl>
+        </div>
+        <p>
+            <a class="back-link" href="/CarModel/Index/2">Back to list</a>
+        </p>
+    </body>
+}
+
+@if (Model.Id == 4)
+{
+    <body>
+
+        <h1>Details(Q7)</h1>
+
+        <div>
+            <hr />
+            <dl>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name):
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+            </dl>
+        </div>
+        <p>
+            <a class="back-link" href="/CarModel/Index/2">Back to list</a>
+        </p>
+    </body>
+}
