--- a/CarStore/Views/Shared/_Layout.cshtml
+++ b/CarStore/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                 </div>
 
                 <nav class="navigation">
-                    <a class="nav-link" href="/Brand/Index">ALL BRANDS</a>
-                    <a class="nav-link" href="/CarModel/Index/1">RENAULT</a>
-                    <a class="nav-link" href="/CarModel/Index/2">AUDI</a>
-                    <a class="nav-link" href="/Purchase/Create">Purchase</a>
+                    <a class="nav-link-car" href="/Brand/Index">ALL BRANDS</a>  
+                    <a class="nav-link-car" href="/CarModel/Index/1">RENAULT</a>
+                    <a class="nav-link-car" href="/CarModel/Index/2">AUDI</a>  |
+                    <a class="nav-link" href="/Purchase/Create">Purchase</a> 
                     <a class="nav-link" href="/Home/Contact">(C)</a>
                     <a class="nav-link" href="/Home/About">(A)</a>
                 </nav>
