--- a/CarStore/Content/ViewsCSS/BrandDetails.css
+++ b/CarStore/Content/ViewsCSS/BrandDetails.css
@@ -24,3 +24,12 @@
     margin-left: 50px;
     padding-left: 15px;
 }
+
+a{
+    font-size: 20px;
+}
+
+.div {
+    display: flex;
+    justify-content: space-between;
+}
