--- a/CarStore/Content/ViewsCSS/CarModelDetails.css
+++ b/CarStore/Content/ViewsCSS/CarModelDetails.css
@@ -1,1 +1,18 @@
-﻿
+﻿img{
+    height: 900px;
+    width: 500px;
+    align-content: center;
+}
+
+span {
+    position: center;
+    font-size: 25px;
+    line-height: 2;
+    background: #ffffff;
+    opacity: 0.8;
+    color: #000000;
+    height: auto;
+    width: 1300px;
+    margin-left: 50px;
+    padding-left: 15px;
+}
