--- a/CarStore/Views/Brand/Details.cshtml
+++ b/CarStore/Views/Brand/Details.cshtml
@@ -17,8 +17,8 @@
 <body>
 
     <h1>Brand info</h1>
-
-    <div>
+    <div class="div">
+        <a href="/CarModel/Index/@Model.Id">Cars</a>
         <hr />
         <div class="detils-img-div">
             @if (Model.Id == 1)
@@ -29,15 +29,15 @@
             {
                 <img class="small-icon" src="~/App_Images/audi-logo.png" alt="Audi-icon" />
             }
-        </div>     
-       
+        </div>
+
         <dl>
             <dt>
                 @Html.DisplayNameFor(model => model.Name):
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Name) 
+                @Html.DisplayFor(model => model.Name)
             </dd>
             <br>
             <dt>
@@ -57,50 +57,50 @@
         <div class="about">
             @if (Model.Id == 1)
             {
-            <span>
-                Groupe Renault is a French multinational automobile manufacturer established in 1899.
-                The company produces a range of cars and vans, and in the past has manufactured trucks, tractors, tanks, buses/coaches, aircraft and aircraft engines, and autorail vehicles.
-                <br>
-                According to the Organisation Internationale des Constructeurs d'Automobiles, in 2016 Renault was the ninth biggest automaker in the world by production volume.
-                By 2017, the Renault–Nissan–Mitsubishi Alliance had become the world's biggest seller of light vehicles, bumping Volkswagen AG off the top spot.
-                <br>
-                Headquartered in Boulogne-Billancourt, near Paris, the Renault group is made up of the namesake Renault marque and subsidiaries, Alpine, Automobile Dacia from Romania, Renault Samsung Motors from South Korea, and AvtoVAZ from Russia.
-                Renault has a 43.4% controlling stake in Nissan of Japan, and a 1.55% stake in Daimler AG of Germany (since 2012, Renault manufactures engines for the Daimler's Mercedes A-Class and B-Class cars).
-                Renault also owns subsidiaries RCI Banque (automotive financing), Renault Retail Group (automotive distribution) and Motrio (automotive parts).
-                Renault has various joint ventures, including Oyak-Renault (Turkey), Renault Pars (Iran).
-                The French government owns a 15% share of Renault.
-                <br>
-                Renault Trucks, previously known as Renault Véhicules Industriels, has been part of AB Volvo since 2001.
-                Renault Agriculture became 100% owned by German agricultural equipment manufacturer CLAAS in 2008.
-                Together Renault and Nissan invested €4 billion (US$5.16 billion) in eight electric vehicles over three to four years beginning in 2011.
-                Renault is known for its role in motor sport, particularly rallying, Formula 1 and Formula E. Its early work on mathematical curve modeling for car bodies is important in the history of computer graphics.
-            </span>
+                <span>
+                    Groupe Renault is a French multinational automobile manufacturer established in 1899.
+                    The company produces a range of cars and vans, and in the past has manufactured trucks, tractors, tanks, buses/coaches, aircraft and aircraft engines, and autorail vehicles.
+                    <br>
+                    According to the Organisation Internationale des Constructeurs d'Automobiles, in 2016 Renault was the ninth biggest automaker in the world by production volume.
+                    By 2017, the Renault–Nissan–Mitsubishi Alliance had become the world's biggest seller of light vehicles, bumping Volkswagen AG off the top spot.
+                    <br>
+                    Headquartered in Boulogne-Billancourt, near Paris, the Renault group is made up of the namesake Renault marque and subsidiaries, Alpine, Automobile Dacia from Romania, Renault Samsung Motors from South Korea, and AvtoVAZ from Russia.
+                    Renault has a 43.4% controlling stake in Nissan of Japan, and a 1.55% stake in Daimler AG of Germany (since 2012, Renault manufactures engines for the Daimler's Mercedes A-Class and B-Class cars).
+                    Renault also owns subsidiaries RCI Banque (automotive financing), Renault Retail Group (automotive distribution) and Motrio (automotive parts).
+                    Renault has various joint ventures, including Oyak-Renault (Turkey), Renault Pars (Iran).
+                    The French government owns a 15% share of Renault.
+                    <br>
+                    Renault Trucks, previously known as Renault Véhicules Industriels, has been part of AB Volvo since 2001.
+                    Renault Agriculture became 100% owned by German agricultural equipment manufacturer CLAAS in 2008.
+                    Together Renault and Nissan invested €4 billion (US$5.16 billion) in eight electric vehicles over three to four years beginning in 2011.
+                    Renault is known for its role in motor sport, particularly rallying, Formula 1 and Formula E. Its early work on mathematical curve modeling for car bodies is important in the history of computer graphics.
+                </span>
             }
             @if (Model.Id == 2)
             {
-        <span>
-            Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury vehicles.
-            Audi is a member of the Volkswagen Group and has its roots at Ingolstadt, Bavaria, Germany.
-            Audi-branded vehicles are produced in nine production facilities worldwide.
-            <br>
-            The origins of the company are complex, going back to the early 20th century and the initial enterprises (Horch and the Audiwerke) founded by engineer August Horch;
-            and two other manufacturers (DKW and Wanderer), leading to the foundation of Auto Union in 1932.
-            The modern era of Audi essentially began in the 1960s when Auto Union was acquired by Volkswagen from Daimler-Benz.
-            After relaunching the Audi brand with the 1965 introduction of the Audi F103 series,
-            Volkswagen merged Auto Union with NSU Motorenwerke in 1969, thus creating the present day form of the company.
-            <br>
-            The company name is based on the Latin translation of the surname of the founder, August Horch.
-            "Horch", meaning "listen" in German, becomes "audi" in Latin.
-            The four rings of the Audi logo each represent one of four car companies that banded together to create Audi's predecessor company, Auto Union.
-            Audi's slogan is Vorsprung durch Technik, meaning "Being Ahead through Technology".
-            However, Audi USA had used the slogan "Truth in Engineering" from 2007 to 2016, and have not used the slogan since 2016.
-            Audi, along with fellow German marques BMW and Mercedes-Benz, is among the best-selling luxury automobile brands in the world.
-        </span>
+                <span>
+                    Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury vehicles.
+                    Audi is a member of the Volkswagen Group and has its roots at Ingolstadt, Bavaria, Germany.
+                    Audi-branded vehicles are produced in nine production facilities worldwide.
+                    <br>
+                    The origins of the company are complex, going back to the early 20th century and the initial enterprises (Horch and the Audiwerke) founded by engineer August Horch;
+                    and two other manufacturers (DKW and Wanderer), leading to the foundation of Auto Union in 1932.
+                    The modern era of Audi essentially began in the 1960s when Auto Union was acquired by Volkswagen from Daimler-Benz.
+                    After relaunching the Audi brand with the 1965 introduction of the Audi F103 series,
+                    Volkswagen merged Auto Union with NSU Motorenwerke in 1969, thus creating the present day form of the company.
+                    <br>
+                    The company name is based on the Latin translation of the surname of the founder, August Horch.
+                    "Horch", meaning "listen" in German, becomes "audi" in Latin.
+                    The four rings of the Audi logo each represent one of four car companies that banded together to create Audi's predecessor company, Auto Union.
+                    Audi's slogan is Vorsprung durch Technik, meaning "Being Ahead through Technology".
+                    However, Audi USA had used the slogan "Truth in Engineering" from 2007 to 2016, and have not used the slogan since 2016.
+                    Audi, along with fellow German marques BMW and Mercedes-Benz, is among the best-selling luxury automobile brands in the world.
+                </span>
             }
 
         </div>
     </div>
-    <p >
+    <p>
         <a class="back-link" href="/Brand/Index">Back to list</a>
     </p>
 
