--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -23,20 +23,19 @@
             {
                 <tr class="tr-bm">
                     <td class="td-bm">
-                        @if (item.Id == 1)
-                        {
-                            <img class="small-icon" src="~/App_Images/megane-small-icon.jpg" alt="Megane-small-icon" />
-                        }
-                        @if (item.Id == 2)
-                        {
-                            <img class="small-icon" src="~/App_Images/duster-small-icon.jpg" alt="Megane-small-icon" />
-                        }
-                        <span>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </span>
-                    </td>
-                    <td class="td-bm">
-                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        <a href="/CarModel/Details/@item.Id">
+                            @if (item.Id == 1)
+                            {
+                                <img class="small-icon" src="~/App_Images/megane-small-icon.jpg" alt="Megane-small-icon" />
+                            }
+                            @if (item.Id == 2)
+                            {
+                                <img class="small-icon" src="~/App_Images/duster-small-icon.jpg" alt="Megane-small-icon" />
+                            }
+                            <span>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </span>
+                        </a>
                     </td>
                     <td class="td-bm">
                         <a href="/CarColor/Index">Color</a>
