--- a/CarStore/Views/Brand/Details.cshtml
+++ b/CarStore/Views/Brand/Details.cshtml
@@ -16,9 +16,12 @@
 
 <body>
 
-    <h1>Brand info</h1>
     <div class="div">
+        <h1>Brand info</h1>
         <a href="/CarModel/Index/@Model.Id">Cars</a>
+    </div>
+        <div>
+
         <hr />
         <div class="detils-img-div">
             @if (Model.Id == 1)
