--- a/CarStore/Content/ViewsCSS/BrandIndex.css
+++ b/CarStore/Content/ViewsCSS/BrandIndex.css
@@ -1,4 +1,27 @@
 ﻿.small-icon {
-    height: 290px;
-    width: 300px;
+    height: 190px;
+    width: 200px;
+}
+
+.table-brand {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    vertical-align: middle;
+    text-align: left;
+    background-color: #000000;
+    opacity: 1;
+    margin-top: 50px;
+    margin-bottom: 25vh;
+    border-top: 1px solid #ffffff;
+}
+
+.td-brand {
+    font-size: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.tr-brand {
+    border-bottom: 1px solid #ffffff;
 }
