--- a/CarStore/Content/ViewsCSS/CarModelDetails.css
+++ b/CarStore/Content/ViewsCSS/CarModelDetails.css
@@ -1,7 +1,7 @@
 ﻿img{
-    height: 900px;
-    width: 500px;
-    align-content: center;
+    height: 520px;
+    width: 900px;
+    margin-left: 250px;
 }
 
 span {
