Added styles for views.

--- a/CarStore/Views/Brand/Details.cshtml
+++ b/CarStore/Views/Brand/Details.cshtml
@@ -18,7 +18,7 @@
 
     <div class="div">
         <h1>Brand info</h1>
-        <a href="/CarModel/Index/@Model.Id">Cars</a>
+        <a class="a" href="/CarModel/Index/@Model.Id">Cars</a>
     </div>
         <div>
 
