--- a/CarStore/Views/Brand/Index.cshtml
+++ b/CarStore/Views/Brand/Index.cshtml
@@ -20,25 +20,28 @@
         <table class="table-brand">
             @foreach (var item in Model)
             {
-                <tr class="tr-brand">
-                    <td class="td-brand">
-                        <a href="/Brand/Details/@item.Id">
-                            
-                            @if (item.Id == 1)
-                            {
-                                <img class="small-icon" src="~/App_Images/renault-logo.jpg" alt="Renault-icon" />
-                            }
-                            @if (item.Id == 2)
-                            {
-                                <img class="small-icon" src="~/App_Images/audi-logo.png" alt="Audi-icon" />
-                            }
-                        </a>
-                    </td>
+            <tr class="tr-brand">
+                <td class="td-brand">
+
+
+                    @if (item.Id == 1)
+                    {
+                        <img class="small-icon" src="~/App_Images/renault-logo.jpg" alt="Renault-icon" />
+                    }
+                    @if (item.Id == 2)
+                    {
+                        <img class="small-icon" src="~/App_Images/audi-logo.png" alt="Audi-icon" />
+                    }
+
+                </td>
+                <td class="td-brand">
+                    <a href="/Brand/Details/@item.Id">Details</a>
+                </td>
                     <td class="td-brand">
                         <a href="/CarModel/Index/@item.Id">View cars</a>
                     </td>
 
-                </tr>
+            </tr>
             }
 
         </table>
