--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -24,6 +24,11 @@
                 <tr class="tr-model">
                     <td class="td-model">
                         <a href="/CarModel/Details/@item.Id">
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </a>
+                    </td> 
+                    <td class="td-model">
+                        <a href="/CarModel/Details/@item.Id">
                             @if (item.Id == 1)
                             {
                                 <img class="small-icon" src="~/App_Images/megane-small-icon.jpg" alt="Megane-small-icon" />
@@ -32,17 +37,14 @@
                             {
                                 <img class="small-icon" src="~/App_Images/duster-small-icon.jpg" alt="Megane-small-icon" />
                             }
-                            <span>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </span>
                         </a>
                     </td>
-                    <td class="td-model">
+                    @*<td class="td-model">
                         <a href="/CarColor/Index">Color</a>
                     </td>
                     <td class="td-model">
                         <a href="/Config/Index/@item.Id">Configuration</a>
-                    </td>
+                    </td>*@
                 </tr>
             }
 
