--- a/CarStore/Content/ViewsCSS/CarModelDetails.css
+++ b/CarStore/Content/ViewsCSS/CarModelDetails.css
@@ -16,3 +16,13 @@ span {
     margin-left: 50px;
     padding-left: 15px;
 }
+
+.config-img{
+    height: 250px;
+    width: 550px;
+}
+
+.div {
+    display: flex;
+    justify-content: space-between;
+}
