--- a/CarStore/Views/Config/Index.cshtml
+++ b/CarStore/Views/Config/Index.cshtml
@@ -17,19 +17,19 @@
     <body>
 
 
-        <h2>Index</h2>
+        <h2>Configurations</h2>
 
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
+        
+        <a href="/CarColor/Index">
+            <h2>Choose your favourite color! -> </h2>
+            @*<img src="#" alt="Megane colors img" />*@
+        </a>
+
         <table class="table-cc">
             <tr class="tr-cc">
                 <th class="th-cc">
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.CarModelId)
-                </th>*@
                 <th class="th-cc">
                     @Html.DisplayNameFor(model => model.Transmission)
                 </th>
@@ -51,9 +51,6 @@
                     <td class="td-cc">
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.CarModelId)
-                    </td>*@
                     <td class="td-cc">
                         @Html.DisplayFor(modelItem => item.Transmission)
                     </td>
@@ -67,15 +64,11 @@
                         @Html.DisplayFor(modelItem => item.WheelSize)
                     </td>
                     <td class="td-cc">
-                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        <a href="#">Choose</a>
                     </td>
                 </tr>
             }
 
         </table>
-
-        <p>
-            <a href="/CarModel/Index">Back</a> @*doesn't work correct*@
-        </p>
 
     </body>
